# varp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/varp/: __init__.py  estimate_var.py  impulse_response.py  irf.py  irf_and_forecast.py  irf_plot.py  predict.py  stacked_matrices.py  stacking_matrices.py  state_space.py
tests/: gen_data.py  test_varp.py
